--- a/src/main/webapp/assets/css/myPointMain.css
+++ b/src/main/webapp/assets/css/myPointMain.css
@@ -1,246 +1,441 @@
 @charset "UTF-8";
 
+/*wrap*/
 #wrap {
 	width: 1920px;
+	margin: 0px auto;
 }
 
-#container {
+/*contents*/
+.contents {
 	width: 1440px;
-	display: grid;
-	grid-gap: 10px;
-	grid-template-columns: 300px 1600px;
-	grid-template-rows: 200px 200px 100px 800px;
-	grid-template-areas: 'menu menu' 'aside top' 'aside middle'
-		'aside bottom';
-}
-
-#container div {
-	padding: 20px;
-	/*border: 1px solid #000;*/
-}
-
-#top {
-	padding: 0px;
-}
-
-#menu {
-	grid-area: menu;
-}
-
-#aside {
-	grid-area: aside;
-}
-
-#top {
-	grid-area: top;
-}
-
-#middle {
-	grid-area: middle;
-	width: 100%;
-	height: 70px;
-	background: rgba(239, 239, 239, 1);
-	opacity: 1;
-	border: 1px solid rgba(217, 217, 217, 1);
+	height: 100%;
+	padding: 50px 180px 200px 0px;
+	margin: 0px auto;
+	/*border: 1px solid #ff00ff;*/
 	overflow: hidden;
 }
 
-#bottom {
-	grid-area: bottom;
-	position: relative;
+/**************************공통******************************/
+
+/*button 요소*/
+.myPage_btnB {
+	color: rgba(255, 255, 255, 1);
+	font-family: Noto Sans;
+	font-weight: SemiBold;
+	font-size: 16px;
+	text-align: center;
+	background: rgba(68, 84, 161, 1);
+	cursor: pointer;
 }
 
-.v137_13264 {
+.myPage_btnY {
+	color: rgba(255, 255, 255, 1);
+	font-family: Noto Sans;
+	font-weight: SemiBold;
+	font-size: 16px;
+	text-align: center;
+	background: rgba(239, 192, 74, 1);
+	cursor: pointer;
+}
+
+/**************************topNav******************************/
+
+/*topNav*/
+.myPage_topNav {
+	width: 1920px;
+	height: 200px;
 	background: rgba(247, 247, 247, 1);
+	text-align: center;
+}
+
+/*메뉴박스1*/
+.myPage_topNav>.box1 {
+	width: 228px;
+	height: 68px;
 	position: relative;
-}
-
-/*** 메뉴 //////////////////////////////////********
-/*메뉴 박스*/
-#menu>.menu1 {
-	width: 260px;
-	height: 100px;
+	top: 51px;
 	background: rgba(255, 255, 255, 1);
-	opacity: 1;
-	position: absolute;
-	top: 50px;
-	left: 616px;
 	border: 1px solid rgba(217, 217, 217, 1);
-	overflow: hidden;
-}
-
-
-.menu1>.menu1-1 {
-	position: absolute;
-	border: 1px solid #000000;
-	display: inline;
-	
-}
-
-.menu1>.menu1-2 {
-	border: 1px solid #000000;
-	display: inline;
-}
-
-.menu1>.menu1-3 {
-	border: 1px solid #000000;
-	display: inline;
-}
-
-.menu1>.menu1-4 {
-	border: 1px solid #000000;
-	display: inline;
-}
-
-
-
-
-#menu>.menu2 {
-	width: 160px;
-	height: 100px;
+	display: inline-block;
+	padding: 15px;
 	background: rgba(255, 255, 255, 1);
-	opacity: 1;
-	position: absolute;
-	top: 50px;
-	left: 879px;
-	border: 1px solid rgba(217, 217, 217, 1);
-	overflow: hidden;
 }
 
-#menu>.menu3 {
-	width: 160px;
-	height: 100px;
+.myPage_topNav>.box1>.box1_box {
+	width: 70px;
+	height: 70xp;
 	background: rgba(255, 255, 255, 1);
-	opacity: 1;
-	position: absolute;
-	top: 50px;
-	left: 1042px;
-	border: 1px solid rgba(217, 217, 217, 1);
-	overflow: hidden;
+	border: 1px solid rgba(70, 84, 163, 1);
+	border-radius: 8px;
+	float: left;
+	margin-right: 25px;
 }
 
-/*마이페이지 메뉴리스트*/
-.mylist>li {
-	padding: 15px 0px 0px 20px;
-	border: 1px solid #a6a6a6;
-	font-size: 14px;
+.myPage_topNav>.box1>p {
+	width: 120px;
+	color: rgba(47, 47, 48, 1);
+	font-family: Montserrat;
 	font-weight: 700;
-	color: #585858;
+	font-size: 16px;
+	text-align: left;
+	float: left;
+	margin-top: 10px;
+}
+
+.myPage_topNav>.box1>span {
+	width: 58px;
+	color: rgba(47, 47, 48, 1);
+	font-family: Montserrat;
+	font-weight: Regular;
+	font-size: 14px;
+	text-align: left;
+	margin-top: 10px;
+	margin-right: 5px;
+	float: left;
+}
+
+/*메뉴박스 별 픽토*/
+.myPage_topNav>.box1>span>img {
+	width: 13px;
+	height: 13px;
+	float: left;
+	margin: 1px 4px 0px 0px;
+}
+
+/*메뉴박스2*/
+.myPage_topNav>.box2 {
+	width: 160px;
+	height: 68px;
+	background: rgba(255, 255, 255, 1);
+	border: 1px solid rgba(217, 217, 217, 1);
+	display: inline-block;
+	padding: 15px;
+	position: relative;
+	top: 5px;
+}
+
+.myPage_topNav>.box2>p {
+	width: 100%;
+	color: rgba(91, 91, 91, 1);
+	font-family: Noto Sans;
+	font-weight: 700;
+	font-size: 16px;
+	position: relative;
+	top: 8px;
+	text-align: left;
+}
+
+.myPage_topNav>.box2>span {
+	width: 61px;
+	color: rgba(70, 84, 163, 1);
+	font-family: Montserrat;
+	font-weight: 700;
+	font-size: 14px;
+	text-align: left;
+	float: left;
+	position: relative;
+	top: 20px;
+}
+
+.myPage_topNav>.box2>img {
+	position: relative;
+	top: 15px;
+	left: 35px;
+}
+
+.myPage_topNav>.box2>P>a {
+	color: rgba(91, 91, 91, 1);
+}
+
+/*메뉴박스3*/
+.myPage_topNav>.box3 {
+	width: 160px;
+	height: 68px;
+	background: rgba(255, 255, 255, 1);
+	border: 1px solid rgba(217, 217, 217, 1);
+	display: inline-block;
+	padding: 15px;
+}
+
+.myPage_topNav>.box3>p {
+	width: 100%;
+	color: rgba(91, 91, 91, 1);
+	font-family: Noto Sans;
+	font-weight: 700;
+	font-size: 16px;
+	opacity: 1;
+	position: relative;
+	top: 8px;
+	text-align: left;
+}
+
+.myPage_topNav>.box3>span {
+	width: 61px;
+	color: rgba(70, 84, 163, 1);
+	font-family: Montserrat;
+	font-weight: 700;
+	font-size: 14px;
+	text-align: left;
+	float: left;
+	position: relative;
+	top: 20px;
+}
+
+.myPage_topNav>.box3>img {
+	position: relative;
+	top: 15px;
+	left: 35px;
+}
+
+.myPage_topNav>.box3>p>a {
+	color: rgba(91, 91, 91, 1);
+}
+
+/**************************sideNav******************************/
+
+/*sideNav*/
+.myPage_sideNav {
+	width: 320px;
+	height: 100%;
+	padding: 0px 0px 0px 90px;
+	/*border: 1px solid #ff00ff;*/
+	float: left;
+}
+
+/* 마이페이지 글자 */
+.myPage_sideNav>h2 {
+	width: 120px;
+	height: 66px;
+	color: rgba(47, 47, 48, 1);
+	font-family: Noto Sans;
+	font-weight: SemiBold;
+	font-size: 24px;
+	color: rgba(47, 47, 48, 1);
+}
+
+/*sideNav list*/
+.myPage_list>li {
 	width: 220px;
 	height: 50px;
+	border: 1px solid #a6a6a6;
+	border-bottom: none;
 }
 
-.mylist>li:hover {
-	color: #4454a1;
-	background-color: rgba(217, 217, 217, 1);
+.myPage_list>li>a {
+	width: 100%;
+	height: 100%;
+	color: #2f2f30;
+	padding: 15px 0px 0px 13px;
+	font-size: 16px;
+	font-family: Noto Sans;
+	font-weight: 700;
+	display: inline-block;
+}
+
+.myPage_list img {
+	float: right;
+	margin-right: 30px;
+	padding-bottom: 3px;
+}
+
+.myPage_list>li:hover {
+	background-color: #f1f1f1;
 	font-weight: 800;
 }
 
-/*마이페이지 글자*/
-#aside>h2 {
-	padding: 0px 0px 0px 23px;
-	color: rgba(47, 47, 48, 1);
-	top: 394px;
-	left: 244px;
-	font-family: Noto Sans;
-	font-size: 24px;
-	opacity: 1;
-	font-weight: 700;
+.myPage_list>li>a:hover {
+	color: #4454a1;
 }
 
-/*메뉴 리스트글자*/
-.menulist {
-	padding: 25px 0px 0px 0px;
-	color: rgba(47, 47, 48, 1);
-	font-family: Noto Sans;
-	font-weight: 700;
-	font-size: 14px;
-	opacity: 1;
-	font-weight: 15px;
+/*list last*/
+.myPage_list>.myPage_list_last {
+	border-bottom: 1px solid #a6a6a6;
 }
 
-.menulist>li {
-	padding: 10px 0px 0px 0px;
-	color: rgba(47, 47, 48, 1);
-	font-family: Noto Sans;
-	font-weight: SemiBold;
-	font-size: 14px;
-	opacity: 1;
-	font-weight: 15px;
+/**************************section******************************/
+
+/*section*/
+.myPage_selection {
+	width: 970px;
+	height: 100%;
+	/*border: 1px solid #ff00ff;*/
+	overflow: hidden;
+	float: left;
 }
 
-/*/////////////////////////middle////////////////////////*/
-#middle>.inputBox {
-	padding: 0px 0px 30px 0px;
-	text-align: center;
+/************section-header*****************/
+.myPage_selection>.myPage_header {
+	width: 100%;
+	height: 100%;
+	/*border: 1px solid #ff00ff;*/
+	float: left;
 }
 
-/*포인트 글자*/
-#top>.point {
-	margin: 0px 30px 30px 0px;
+/*h3 글자*/
+.myPage_selection>.myPage_header>h3 {
 	color: rgba(47, 47, 48, 1);
 	font-family: Noto Sans;
 	font-weight: SemiBold;
 	font-size: 24px;
-	opacity: 1;
-	font-weight: 700;
-	display: inline;
+	display: inline-block;
+	padding: 0px 10px 41px 0px;
 }
 
-/*포인트 사용 적립 내역 글자*/
-#top>.point2 {
-	width: 100px;
+/*p태그 글자*/
+.myPage_selection>.myPage_header>p {
 	color: rgba(47, 47, 48, 1);
-	text-align: left;
-	display: inline;
-}
-
-#top>.pointBox {
-	width: 242px;
-	color: rgba(47, 47, 48, 1);
-	top: 405px;
-	left: 655px;
 	font-family: Noto Sans;
 	font-weight: Regular;
 	font-size: 16px;
-	opacity: 1;
-	text-align: left;
+	display: inline-block;
 }
 
-#bottom>h3 {
-	width: 200px;
-	color: rgba(70, 84, 163, 1);
-	top: 674px;
-	left: 530px;
+/*list 글자*/
+.myPage_selection>.myPage_header>ul>li {
+	color: rgba(81, 81, 81, 1);
 	font-family: Noto Sans;
-	font-weight: 700;
-	font-size: 24px;
-	opacity: 1;
+	font-weight: Regular;
+	font-size: 14px;
+	list-style: disc;
+	padding: 0px 0px 10px 0px;
+}
+
+/************section-article*****************/
+
+/*myPage_article*/
+.myPage_selection>.myPage_article {
+	width: 100%;
+	height: 70px;
+	float: left;
+	background: rgba(239, 239, 239, 1);
+	border: 1px solid rgba(217, 217, 217, 1);
+	margin-top: 20px;
+}
+
+/*inputBox*/
+.inputBox {
+	padding: 14px 2px 10px 7px;
 	text-align: left;
 }
 
-/*테이블*/
-#bottom>table {
-	width: 100%;
-	height: 51px;
-	background: rgba(245, 245, 245, 1);
+/*inputBox 스타일*/
+input {
+	width: 178px;
+	height: 40px;
+	background: rgba(255, 255, 255, 1);
 	opacity: 1;
-	position: absolute;
-	top: 60px;
-	left: 0px;
+	top: 580px;
+	left: 555px;
+	border: 1px solid rgba(217, 217, 217, 1);
 	overflow: hidden;
-	border-top: 3px solid rgba(68, 84, 161, 1);
+	text-align: center;
+	color: rgba(102, 102, 102, 1);
+	font-family: Noto Sans;
+	font-weight: Regular;
+	font-size: 16px;
 	text-align: center;
 }
 
-#bottom th {
-	padding: 20px 0px 20px 0px;
-	background-color: rgba(245, 245, 245, 1);
-	border-bottom: 2px solid rgba(245, 245, 245, 1);
+select {
+	width: 128px;
+	height: 40px;
+	background: rgba(255, 255, 255, 1);
+	opacity: 1;
+	top: 580px;
+	left: 945px;
+	border: 1px solid rgba(217, 217, 217, 1);
+	overflow: hidden;
+	text-align: center;
+	color: rgba(102, 102, 102, 1);
+	font-family: Noto Sans;
+	font-weight: Regular;
+	font-size: 16px;
+	text-align: center;
 }
 
-#bottom td {
+/*버튼*/
+.btns {
+	float: right;
+	margin: 1px 8px 0px 0px;
+}
+
+.myPage_btnB {
+	width: 150px;
+	height: 40px;
+}
+
+.myPage_btnY {
+	width: 150px;
+	height: 40px;
+}
+
+/************section-article2*****************/
+
+/*myPage_article2*/
+.myPage_selection>.myPage_article2 {
+	width: 100%;
+	height: 100%;
+	/*border: 1px solid #ff00ff;*/
+	float: left;
+}
+
+/*h4 글자*/
+.myPage_article2>h4 {
+	color: rgba(70, 84, 163, 1);
+	font-family: Noto Sans;
+	font-weight: 700;
+	font-size: 18px;
+	border-bottom: 3px solid rgba(68, 84, 161, 1);
+	padding: 30px 0px 15px 0px;
+}
+
+/*리스트 테이블*/
+.myPage_article2>table {
+	width: 100%;
+	height: 51px;
+	background: rgba(245, 245, 245, 1);
+	text-align: center;
+	color: rgba(30, 30, 30, 1);
+	font-family: Noto Sans;
+	font-weight: Medium;
+	font-size: 14px;
+}
+
+.myPage_article2 th {
+	padding: 20px 0px 20px 0px;
+	background-color: rgba(245, 245, 245, 1);
+	border-bottom: 1px solid rgba(217, 217, 217, 1);
+}
+
+.myPage_article2 td {
 	padding: 20px 0px 20px 0px;
 	background-color: white;
-	border-bottom: 2px solid rgba(245, 245, 245, 1);
+	border-bottom: 1px solid rgba(217, 217, 217, 1);
+}
+
+/*페이징*/
+.paging {
+	margin: 0px auto;
+	margin-top: 50px;
+	width: 672px;
+	height: 40px;
+	font-family: Noto Sans;
+	font-weight: bold;
+	font-size: 12px;
+}
+
+.paging ul>li {
+	float: left;
+	padding: 15px 17px 15px 17px;
+	border: 1px solid rgba(239, 239, 239, 1);
+}
+
+.paging .myPage_PagePicto {
+	width: 11px;
+	height: 11px;
+}
+
+.paging ul>li>a {
+	color: rgba(75, 75, 75, 1);
 }
