--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -8,7 +8,7 @@
 
 /*지은*/
 @import url("myPointMain.css");
-@import url("myPageCommon.css");
 @import url("myPointCarge.css");
 @import url("myCouponBuy.css");
 @import url("myCouponUse.css");
+@import url("myPointRefundMain.css");
