--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -12,3 +12,4 @@
 @import url("myCouponBuy.css");
 @import url("myCouponUse.css");
 @import url("myPointRefundMain.css");
+@import url("myInfoChk.css");
