--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -13,3 +13,8 @@
 @import url("myCouponUse.css");
 @import url("myPointRefundMain.css");
 @import url("myInfoChk.css");
+
+
+/*려경*/
+@import url("Common_Mypage.css");
+
