--- a/src/main/webapp/assets/css/myInfoChk.css
+++ b/src/main/webapp/assets/css/myInfoChk.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+
+.myPage_article2 .myPage_InfoChk {
+	text-align: center;
+	padding-top: 20px;
+}
+
 /*비밀번호 재확인 글자*/
 .myPage_InfoChkEx h4 {
     color: rgba(81,81,81,1);
@@ -21,6 +27,16 @@
 }
 
 .myPage_article2 .myPage_InfoChkPass {
-   height:300px;
-    border-bottom: 1px solid rgba(217,217,217,1);
+   height:200px;
+   border-bottom: 1px solid rgba(217,217,217,1);
+}
+
+/*아이디 비밀번호*/
+
+.myPage_InfoChkPass > tr {
+    color: rgba(30,30,30,1);
+    font-family: Noto Sans;
+    font-weight: Regular;
+    font-size: 16px;
+    text-align: left;
 }
