--- a/src/main/webapp/assets/css/Common_Mypage.css
+++ b/src/main/webapp/assets/css/Common_Mypage.css
@@ -327,7 +327,7 @@
    border: none;
    font-weight: bold;
 }
-input {
+.inputBox input {
    width: 178px;
    height: 40px;
    background: rgba(255, 255, 255, 1);
@@ -340,7 +340,7 @@ input {
    text-align: center;
 }
 
-select {
+.inputBox select {
    width: 128px;
    height: 42px;
    background: rgba(255, 255, 255, 1);
